force-app/main/default/objects/job_application__c/job_application__c.object-meta.xml
<CustomObject>
    <label>job application</label>
    <nameField>
        <displayFormat>JA-{00000}</displayFormat>
        <label>job application Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>job applications</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>