force-app/main/default/objects/job_application__c/fields/average_rating__c.field-meta.xml
<CustomField>
    <fullName>average_rating__c</fullName>
    <formula>total_rating__c  /  no_of_reviews__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>average rating</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>