force-app/main/default/objects/job_application__c/fields/cover_letter__c.field-meta.xml
<CustomField>
    <fullName>cover_letter__c</fullName>
    <label>cover letter</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>