force-app/main/default/objects/job_application__c/fields/no_of_reviews__c.field-meta.xml
<CustomField>
    <fullName>no_of_reviews__c</fullName>
    <label>no of reviews</label>
    <summaryForeignKey>review__c.job_application__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>