force-app/main/default/objects/job_application__c/fields/position__c.field-meta.xml
<CustomField>
    <fullName>position__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>position</label>
    <referenceTo>position__c</referenceTo>
    <relationshipLabel>job applications</relationshipLabel>
    <relationshipName>job_applications</relationshipName>
    <type>Lookup</type>
</CustomField>