force-app/main/default/objects/job_application__c/fields/status__c.field-meta.xml
<CustomField>
    <fullName>status__c</fullName>
    <label>status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>new</fullName>
                <default>true</default>
                <label>new</label>
            </value>
            <value>
                <fullName>review resume</fullName>
            </value>
            <value>
                <fullName>phone screen</fullName>
            </value>
            <value>
                <fullName>hired</fullName>
            </value>
            <value>
                <fullName>rejected</fullName>
            </value>
            <value>
                <fullName>offer</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>