force-app/main/default/objects/job_application__c/fields/total_rating__c.field-meta.xml
<CustomField>
    <fullName>total_rating__c</fullName>
    <label>total rating</label>
    <summarizedField>review__c.rating__c</summarizedField>
    <summaryForeignKey>review__c.job_application__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>