force-app/main/default/objects/job_application__c/validationRules/reviews_rollup.validationRule-meta.xml
<ValidationRule>
    <fullName>reviews_rollup</fullName>
    <active>true</active>
    <errorConditionFormula>AND( ISPICKVAL( status__c , &quot;hired&quot;) , no_of_reviews__c &lt; PRIORVALUE( no_of_reviews__c ) )</errorConditionFormula>
    <errorMessage>no deletion</errorMessage>
</ValidationRule>